# server/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/openai/api/v1/audio/transcriptions": {
+        "/audio/transcriptions": {
             "post": {
                 "description": "Transcribe an audio file to text",
                 "consumes": [
@@ -45,7 +45,7 @@
                 }
             }
         },
-        "/openai/api/v1/audio/translations": {
+        "/audio/translations": {
             "post": {
                 "description": "Translate an audio file to text",
                 "consumes": [
@@ -86,7 +86,7 @@
                 }
             }
         },
-        "/openai/api/v1/chat": {
+        "/chat": {
             "post": {
                 "description": "使用OpenAI的API完成聊天提示",
                 "consumes": [
@@ -128,7 +128,7 @@
                 }
             }
         },
-        "/openai/api/v1/chat/edit": {
+        "/chat/edit": {
             "post": {
                 "description": "Edit a chat prompt using OpenAI's API",
                 "consumes": [
@@ -180,7 +180,7 @@
                 }
             }
         },
-        "/openai/api/v1/completions": {
+        "/completions": {
             "post": {
                 "description": "Complete a text prompt using OpenAI's API",
                 "consumes": [
@@ -279,7 +279,7 @@
                 }
             }
         },
-        "/openai/api/v1/embeddings": {
+        "/embeddings": {
             "post": {
                 "description": "Get embeddings for a given input",
                 "consumes": [
@@ -322,7 +322,7 @@
                 }
             }
         },
-        "/openai/api/v1/files/upload": {
+        "/files/upload": {
             "post": {
                 "description": "Upload a file to be fine-tuned",
                 "consumes": [
@@ -363,7 +363,7 @@
                 }
             }
         },
-        "/openai/api/v1/files/{file_id}": {
+        "/files/{file_id}": {
             "get": {
                 "description": "Get information about a fine-tuned file",
                 "consumes": [
@@ -443,7 +443,7 @@
                 }
             }
         },
-        "/openai/api/v1/fine-tunes": {
+        "/fine-tunes": {
             "get": {
                 "description": "Get a list of all fine-tune jobs",
                 "consumes": [
@@ -475,7 +475,7 @@
                 }
             }
         },
-        "/openai/api/v1/fine-tunes/{file_id}": {
+        "/fine-tunes/{file_id}": {
             "post": {
                 "description": "Create a fine-tune job using a file ID",
                 "consumes": [
@@ -516,7 +516,7 @@
                 }
             }
         },
-        "/openai/api/v1/fine-tunes/{fine_tune_id}": {
+        "/fine-tunes/{fine_tune_id}": {
             "get": {
                 "description": "Get information about a fine-tune job",
                 "consumes": [
@@ -596,7 +596,7 @@
                 }
             }
         },
-        "/openai/api/v1/fine-tunes/{fine_tune_id}/cancel": {
+        "/fine-tunes/{fine_tune_id}/cancel": {
             "post": {
                 "description": "Cancel a fine-tune job using a fine-tune job ID",
                 "consumes": [
@@ -637,7 +637,7 @@
                 }
             }
         },
-        "/openai/api/v1/fine-tunes/{fine_tune_id}/events": {
+        "/fine-tunes/{fine_tune_id}/events": {
             "get": {
                 "description": "Get events for a fine-tune job",
                 "consumes": [
@@ -678,7 +678,7 @@
                 }
             }
         },
-        "/openai/api/v1/images": {
+        "/images": {
             "get": {
                 "description": "Generate an image using OpenAI's DALL-E API",
                 "consumes": [
@@ -736,7 +736,7 @@
                 }
             }
         },
-        "/openai/api/v1/images/edit": {
+        "/images/edit": {
             "post": {
                 "description": "Edit an image using OpenAI's DALL-E API",
                 "consumes": [
@@ -786,7 +786,7 @@
                 }
             }
         },
-        "/openai/api/v1/images/variations": {
+        "/images/variations": {
             "post": {
                 "description": "Generate variations of an image using OpenAI's DALL-E API",
                 "consumes": [
@@ -844,7 +844,7 @@
                 }
             }
         },
-        "/openai/api/v1/models": {
+        "/models": {
             "get": {
                 "description": "List all available models",
                 "consumes": [
@@ -879,7 +879,7 @@
                 }
             }
         },
-        "/openai/api/v1/models/{name}": {
+        "/models/{name}": {
             "get": {
                 "description": "Get information about a specific OpenAI model",
                 "consumes": [
@@ -923,7 +923,7 @@
                 }
             }
         },
-        "/openai/api/v1/moderations": {
+        "/moderations": {
             "post": {
                 "description": "Check if text contains inappropriate content using OpenAI's API",
                 "consumes": [
